k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taskflow-backend
  namespace: dev
spec:
  selector:
    app: taskflow-backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
