k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taskflow-frontend-service
  namespace: dev
spec:
  selector:
    app: taskflow-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
